--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,12 @@
 name = "rustcan"
 version = "0.1.0"
 edition = "2021"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Lain Iwakura <lain@iwakurahome.ru>"]
 description = "A fast port scanner written in Rust, inspired by Nmap and Masscan"
 
 [dependencies]
-tokio = { version = "1.0", features = ["full"] }
-clap = { version = "4.0", features = ["derive"] }
+tokio = { version = "1.36", features = ["full"] }
+clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 indicatif = "0.17"
 serde = { version = "1.0", features = ["derive"] }
@@ -17,4 +17,10 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 bytes = "1.0"
 async-trait = "0.1"
-regex = "1.0"
+regex = "1.10"
+futures = "0.3"
+crossbeam-channel = "0.5"
+base64 = "0.21"
+chrono = "0.4"
+ipnetwork = "0.20"
+trust-dns-resolver = { version = "0.22", features = ["tokio-runtime"] }
